fix overlapping of VideoPlayer

--- a/src/styles/VideoPlayer.sass
+++ b/src/styles/VideoPlayer.sass
@@ -3,6 +3,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
+	z-index: 700;
 	opacity: 0;
 
 	-moz-transform: scale(.9) translateY(0);
